--- a/MyShopify/test-output/index.html
+++ b/MyShopify/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -100,6 +100,16 @@
                       <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
                     <div class="method-list-content passed suite-Suite">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.optimus.shopify.test.SearchAndAddProductTest" hash-for-method="addFeaturedCollectionProduct">addFeaturedCollectionProduct</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.optimus.shopify.test.SearchAndAddProductTest" hash-for-method="addFeaturedCollectionProduct">addFeaturedCollectionProduct</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.optimus.shopify.test.SearchAndAddProductTest" hash-for-method="searchProduct">searchProduct</a> <!-- method navigator-link -->
@@ -128,6 +138,20 @@
               <span class="class-name">com.optimus.shopify.test.SearchAndAddProductTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="addFeaturedCollectionProduct">
+                  </a> <!-- addFeaturedCollectionProduct -->
+                  <span class="method-name">addFeaturedCollectionProduct</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="addFeaturedCollectionProduct">
+                  </a> <!-- addFeaturedCollectionProduct -->
+                  <span class="method-name">addFeaturedCollectionProduct</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="searchProduct">
@@ -206,20 +230,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'searchProduct')
 data.setCell(0, 2, 'com.optimus.shopify.test.SearchAndAddProductTest')
-data.setCell(0, 3, 7193);
+data.setCell(0, 3, 6471);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'searchProduct')
+data.setCell(1, 1, 'addFeaturedCollectionProduct')
 data.setCell(1, 2, 'com.optimus.shopify.test.SearchAndAddProductTest')
-data.setCell(1, 3, 6629);
+data.setCell(1, 3, 5183);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'addFeaturedCollectionProduct')
+data.setCell(2, 2, 'com.optimus.shopify.test.SearchAndAddProductTest')
+data.setCell(2, 3, 4856);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'searchProduct')
+data.setCell(3, 2, 'com.optimus.shopify.test.SearchAndAddProductTest')
+data.setCell(3, 3, 1463);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 17 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -256,35 +288,43 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">launchBrowser(chrome)</span>
-                <span class="method-start">9 ms</span>
+                <span class="method-start">164 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">launchBrowser(firefox)</span>
-                <span class="method-start">9 ms</span>
+                <span class="method-start">164 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">loginApplication</span>
-                <span class="method-start">3848 ms</span>
+                <span class="method-start">5081 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="configuration-class before">
+                <span class="method-name">loginApplication</span>
+                <span class="method-start">6468 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">searchProduct</span>
-                <span class="method-start">4933 ms</span>
+                <span class="method-name">addFeaturedCollectionProduct</span>
+                <span class="method-start">6731 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-class before">
-                <span class="method-name">loginApplication</span>
-                <span class="method-start">6663 ms</span>
-              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">addFeaturedCollectionProduct</span>
+                <span class="method-start">7667 ms</span>
+              </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">searchProduct</span>
-                <span class="method-start">7765 ms</span>
+                <span class="method-start">11589 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">searchProduct</span>
+                <span class="method-start">12851 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">closeDriver</span>
-                <span class="method-start">11563 ms</span>
+                <span class="method-start">14315 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-class after">
                 <span class="method-name">closeDriver</span>
-                <span class="method-start">14959 ms</span>
+                <span class="method-start">18060 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
