--- a/MyShopify/test-output/old/Suite/methods-alphabetical.html
+++ b/MyShopify/test-output/old/Suite/methods-alphabetical.html
@@ -1,24 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="af787b">  <td>20/05/14 01:45:24</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;DriverManager.beforeTest()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@2d928643]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@916448050</td>   <td></td> </tr>
-<tr bgcolor="af787b">  <td>20/05/14 01:45:24</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;DriverManager.beforeTest()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@78c03f1f]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1719991631</td>   <td></td> </tr>
-<tr bgcolor="af787b">  <td>20/05/14 01:45:36</td>   <td>11561</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DriverManager.closeDriver()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@2d928643]">&lt;&lt;closeDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@916448050</td>   <td></td> </tr>
-<tr bgcolor="af787b">  <td>20/05/14 01:45:39</td>   <td>14957</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DriverManager.closeDriver()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@78c03f1f]">&lt;&lt;closeDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1719991631</td>   <td></td> </tr>
-<tr bgcolor="af787b">  <td>20/05/14 01:45:24</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DriverManager.launchBrowser(java.lang.String)[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@2d928643]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@916448050</td>   <td></td> </tr>
-<tr bgcolor="af787b">  <td>20/05/14 01:45:24</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DriverManager.launchBrowser(java.lang.String)[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@78c03f1f]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1719991631</td>   <td></td> </tr>
-<tr bgcolor="61b7af">  <td>20/05/14 01:45:28</td>   <td>3848</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchAndAddProductTest.loginApplication()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@2d928643]">&gt;&gt;loginApplication</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@916448050</td>   <td></td> </tr>
-<tr bgcolor="61b7af">  <td>20/05/14 01:45:31</td>   <td>6662</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchAndAddProductTest.loginApplication()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@78c03f1f]">&gt;&gt;loginApplication</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1719991631</td>   <td></td> </tr>
-<tr bgcolor="61b7af">  <td>20/05/14 01:45:29</td>   <td>4931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndAddProductTest.searchProduct()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@2d928643]">searchProduct</td> 
-  <td>TestNG@916448050</td>   <td></td> </tr>
-<tr bgcolor="61b7af">  <td>20/05/14 01:45:32</td>   <td>7763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndAddProductTest.searchProduct()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@78c03f1f]">searchProduct</td> 
-  <td>TestNG@1719991631</td>   <td></td> </tr>
+<tr bgcolor="77a679">  <td>20/05/14 16:48:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndAddProductTest.addFeaturedCollectionProduct()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@148080bb]">addFeaturedCollectionProduct</td> 
+  <td>TestNG@479352762</td>   <td></td> </tr>
+<tr bgcolor="77a679">  <td>20/05/14 16:48:57</td>   <td>936</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndAddProductTest.addFeaturedCollectionProduct()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@56235b8e]">addFeaturedCollectionProduct</td> 
+  <td>TestNG@412571670</td>   <td></td> </tr>
+<tr bgcolor="ab7c62">  <td>20/05/14 16:48:49</td>   <td>-6728</td> <td>&nbsp;</td><td title="&gt;&gt;DriverManager.beforeTest()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@56235b8e]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@412571670</td>   <td></td> </tr>
+<tr bgcolor="ab7c62">  <td>20/05/14 16:48:49</td>   <td>-6728</td> <td>&nbsp;</td><td title="&gt;&gt;DriverManager.beforeTest()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@148080bb]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@479352762</td>   <td></td> </tr>
+<tr bgcolor="ab7c62">  <td>20/05/14 16:49:04</td>   <td>7584</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DriverManager.closeDriver()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@56235b8e]">&lt;&lt;closeDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@412571670</td>   <td></td> </tr>
+<tr bgcolor="ab7c62">  <td>20/05/14 16:49:07</td>   <td>11329</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DriverManager.closeDriver()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@148080bb]">&lt;&lt;closeDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@479352762</td>   <td></td> </tr>
+<tr bgcolor="ab7c62">  <td>20/05/14 16:48:49</td>   <td>-6566</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DriverManager.launchBrowser(java.lang.String)[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@148080bb]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@479352762</td>   <td></td> </tr>
+<tr bgcolor="ab7c62">  <td>20/05/14 16:48:49</td>   <td>-6566</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DriverManager.launchBrowser(java.lang.String)[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@56235b8e]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@412571670</td>   <td></td> </tr>
+<tr bgcolor="77a679">  <td>20/05/14 16:48:54</td>   <td>-1650</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchAndAddProductTest.loginApplication()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@148080bb]">&gt;&gt;loginApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@479352762</td>   <td></td> </tr>
+<tr bgcolor="77a679">  <td>20/05/14 16:48:56</td>   <td>-263</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchAndAddProductTest.loginApplication()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@56235b8e]">&gt;&gt;loginApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@412571670</td>   <td></td> </tr>
+<tr bgcolor="77a679">  <td>20/05/14 16:49:01</td>   <td>4858</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndAddProductTest.searchProduct()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@148080bb]">searchProduct</td> 
+  <td>TestNG@479352762</td>   <td></td> </tr>
+<tr bgcolor="77a679">  <td>20/05/14 16:49:02</td>   <td>6120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndAddProductTest.searchProduct()[pri:0, instance:com.optimus.shopify.test.SearchAndAddProductTest@56235b8e]">searchProduct</td> 
+  <td>TestNG@412571670</td>   <td></td> </tr>
 </table>
